RESOLVED FIXED165456
[CSS Parser] Fix dashboard region parsing
https://bugs.webkit.org/show_bug.cgi?id=165456
Summary [CSS Parser] Fix dashboard region parsing
Dave Hyatt
Reported 2016-12-05 20:44:50 PST
[CSS Parser] Fix dashboard region parsing
Attachments
Patch (1.67 KB, patch)
2016-12-05 20:45 PST, Dave Hyatt
zalan: review+
Dave Hyatt
Comment 1 2016-12-05 20:45:42 PST
Dave Hyatt
Comment 2 2016-12-05 20:47:26 PST
Fixed in r209384.
Note You need to log in before you can comment on or make changes to this bug.