[CSS Parser] Fix dashboard region parsing https://bugs.webkit.org/show_bug.cgi?id=165456

Reviewed by Zalan Bujtas.

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeWebkitDashboardRegion):
Make sure to reject whitespace by itself as well as unclosed dashboard-region functions.



Canonical link: https://commits.webkit.org/183051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209384 268f45cc-cd09-0410-ab3c-d52691b4dbfc